unpackaged/objects/State_Code_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pin_Code__c</fullName>
        <label>Pin Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_GST_CODE__c</fullName>
        <label>State GST Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>State Code Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>State_GST_CODE__c</columns>
        <columns>City__c</columns>
        <columns>Pin_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Pin_Code__c</field>
            <operation>equals</operation>
            <value>507130</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCM-{000000}</displayFormat>
        <label>SCM #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>State Code Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>